--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ h2 {
   text-align: center;
   margin-bottom: 60px;
   font-size: 2.2rem;
-  color: #FFA500
+  color: #FFA500;
   position: relative;
 }
 
